<resources>
    <string name="app_name">Registeagiton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="ro_yhatdan_o_tish">Ro\'yhatdan o\'tish</string>
    <string name="ism_familiya">Ism, Familiya</string>
    <string name="tizimga_kirish">Tizimga kirish</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="parol">Parol</string>
    <string name="o_chirish">o\'chirish</string>
</resources>